--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 	"packageManager": "pnpm@10.6.4",
 	"devDependencies": {
 		"typescript": "^5.8.3",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-node-polyfills": "^0.23.0"
 	},
 	"dependencies": {
 		"@helia/verified-fetch": "^2.6.4"
