--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,7 +45,10 @@ jobs:
           
       - name: Install dependencies
         run: pnpm install
-        
+
+      - name: Clear Vite Cache (if exists)
+        run: rm -rf node_modules/.vite || true # Use '|| true' to avoid error if dir doesn't exist
+
       - name: Build
         run: pnpm build
         
