--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"vite-plugin-node-polyfills": "^0.23.0"
 	},
 	"dependencies": {
+		"@helia/block-brokers": "^4.1.0",
 		"@helia/verified-fetch": "^2.6.4",
 		"@libp2p/bootstrap": "^11.0.33",
 		"@libp2p/circuit-relay-v2": "^3.2.9",
 		"@libp2p/webrtc": "^5.2.10",
 		"@libp2p/websockets": "^9.2.9",
 		"@multiformats/multiaddr": "^12.4.0",
+		"@multiformats/multiaddr-matcher": "^1.7.0",
 		"helia": "^5.3.0"
 	}
 }
